ICE-4988: Fixed sortable data table header alignment problems.

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
@@ -2469,6 +2469,10 @@ Disabeld classes for the calendar controls
     color: #FFFFFF;
 }
 
+.iceCmdSrtHdr table {
+    display: inline;
+}
+
 .iceCmdSrtHdr-dis {
     color: #999999;
     font-family: Arial, Helvetica, sans-serif;
