--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp.css
@@ -2487,6 +2487,10 @@ Disabled classes for the calendar controls
     display: block;
 }
 
+.iceCmdSrtHdr table {
+    display: inline;
+}
+
 .iceCmdSrtHdr-dis {
     text-decoration: none;
     /*border: 1px solid #ABABAB;*/
